# IGSTK

./: .gitattributes  .gitmodules  .hooks-config.bash  Annotation.cxx  Annotation.h  AuroraTracker.cxx  AuroraTracker.h  CMakeLists.txt  CTestConfig.cmake  ClickedPointEvent.h  CommonNDIDefines.h  ConfidenceConnectedModule.cxx  ConfidenceConnectedModule.h  ConnectedThresholdModule.cxx  ConnectedThresholdModule.h  Conversions.cxx  Conversions.h  Copyright.txt  CrossLine.cxx  CrossLine.h  CyclicRedundancy.cxx  CyclicRedundancy.h  DartConfig.cmake  DicomImageReader.h  DicomImageReader.txx  DicomImageReaderBase.cxx  DicomImageReaderBase.h  DicomImageReaderGUI.fl  FantasticRegistration.cxx  FantasticRegistration.h  FiducialRegistration.cxx  FiducialRegistration.h  Fl_Double_Window_Ex.cxx  Fl_Double_Window_Ex.h  ICPRegistration.cxx  ICPRegistration.h  IGMTImageSliceViewer.cxx  IGMTImageSliceViewer.h  IGMTRegistrationViewer.cxx  IGMTRegistrationViewer.h  (+54 more)
Examples/: Application.cxx  Application.h  CMakeLists.txt  CTestTestfile.cmake  Makefile  Readme.txt  cmake_install.cmake  main.cxx
Examples/ApplicationModel/: Application.cxx  Application.h  ApplicationBase.cxx  ApplicationBase.h  ApplicationGUI.fl  CMakeLists.txt
Examples/ApplicationQt/: Application.cxx  Application.h  ApplicationBase.cxx  ApplicationBase.h  CMakeLists.txt  applicationgui.ui  applicationgui.ui.h  main.cxx  vtkQtRenderWindow.cpp  vtkQtRenderWindow.h  vtkQtRenderWindowInteractor.cpp  vtkQtRenderWindowInteractor.h
Examples/ApplicationsCommon/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Examples/AscensionTracker/: AscensionTracker.cxx  CMakeLists.txt
Examples/BronchoscopyNavigator/: BronchoscopyNavigator.cxx  BronchoscopyNavigator.h  BronchoscopyNavigatorGUI.fl  BronchoscopyNavigatorQuadrantViews.cxx  BronchoscopyNavigatorQuadrantViews.h  CMakeLists.txt  commitTest.cpp  igstkFiducialsPlanIO.cxx  main.cxx  test.h
Examples/CoordinateSystems/: CMakeLists.txt  CoordinateSystems1.cxx  CoordinateSystems2.cxx  CoordinateSystems3.cxx
Examples/DICOMImageReader/: CMakeLists.txt  CTestTestfile.cmake  DICOMImageReader1.cxx  Makefile  cmake_install.cmake
Examples/DeckOfCardRobot/: CMakeLists.txt  CTestTestfile.cmake  Configure.h  DOCR_Registration.cxx  DOCR_Registration.h  DeckOfCardRobot.cxx  DeckOfCardRobot.h  DeckOfCardRobotGUI.cxx  DeckOfCardRobotGUI.fl  DeckOfCardRobotGUI.h  DeckOfCardRobotRegistrationBase.cxx  DeckOfCardRobotRegistrationBase.h  FiducialModel.cxx  FiducialModel.h  FiducialSegmentation.cxx  FiducialSegmentation.h  FiducialSegmentationTest.cxx  IterativeClosestPointsBasedRegistration.cxx  IterativeClosestPointsBasedRegistration.h  LandmarkBasedRegistration.cxx  LandmarkBasedRegistration.h  Makefile  ModelBasedClustering.cxx  ModelBasedClustering.h  ModelBasedRegistration.cxx  ModelBasedRegistration.h  ModelImageGenerate.cxx  ModelImageGenerateTest.cxx  PCAOnPoints.cxx  PCAOnPoints.h  PointsClustering.cxx  PointsClustering.h  PointsClusteringTest.cxx  RobotCommunication.cxx  RobotCommunication.h  cmake_install.cmake  igstkImageSpatialObjectVolumeRepresentation.h  main.cxx  (+1 more)
Source/: CMakeLists.txt  README  igstkAffineTransform.cxx  igstkAffineTransform.h  igstkAnnotation2D.cxx  igstkAnnotation2D.h  igstkArucoTracker.cxx  igstkArucoTracker.h  igstkArucoTrackerTool.cxx  igstkArucoTrackerTool.h  igstkAscension3DGTracker.cxx  igstkAscension3DGTracker.h  igstkAscension3DGTrackerTool.cxx  igstkAscension3DGTrackerTool.h  igstkAscensionCommandInterpreter.cxx  igstkAscensionCommandInterpreter.h  igstkAscensionTracker.cxx  igstkAscensionTracker.h  igstkAscensionTrackerTool.cxx  igstkAscensionTrackerTool.h  igstkAtamaiNDITracker.cxx  igstkAtamaiNDITracker.h  igstkAtracsysEasyTrack.cxx  igstkAtracsysEasyTrack.h  igstkAtracsysEasyTrackTool.cxx  igstkAtracsysEasyTrackTool.h  igstkAtracsysEasyTrackTracker.cxx  igstkAtracsysEasyTrackTracker.h  igstkAtracsysEasyTrackTrackerTool.cxx  igstkAtracsysEasyTrackTrackerTool.h  igstkAuroraTool.cxx  igstkAuroraTool.h  igstkAuroraTracker.cxx  igstkAuroraTracker.h  igstkAuroraTracker2.cxx  igstkAuroraTracker2.h  igstkAuroraTrackerNew.cxx  igstkAuroraTrackerNew.h  igstkAuroraTrackerTool.cxx  igstkAuroraTrackerTool.h  (+481 more)
Testing/: CMakeLists.txt  CTestCustom.ctest.in  IGSTKTestingMacros.cmake  SystemInformation.cxx  igstkAffineTransformTest.cxx  igstkAnnotation2DTest.cxx  igstkAnnotation2DTest2.cxx  igstkArucoTrackerSimulatedTest.cxx  igstkArucoTrackerToolTest.cxx  igstkAscension3DGTrackerTest.cxx  igstkAscension3DGTrackerToolTest.cxx  igstkAscensionTrackerTest.cxx  igstkAtamaiNDITrackerTest.cxx  igstkAtracsysEasyTrackTrackerTest.cxx  igstkAtracsysEasyTrackTrackerToolTest.cxx  igstkAuroraTrackerNewSimulatedTest.cxx  igstkAuroraTrackerNewTest.cxx  igstkAuroraTrackerSimulatedTest.cxx  igstkAuroraTrackerTest.cxx  igstkAuroraTrackerTest2.cxx  igstkAuroraTrackerTest3.cxx  igstkAuroraTrackerToolNewTest.cxx  igstkAuroraTrackerToolObserverToOpenIGTLinkRelayTest.cxx  igstkAuroraTrackerToolObserverToSocketRelayTest.cxx  igstkAuroraTrackerToolTest.cxx  igstkAxesObjectTest.cxx  igstkAxios3DTrackerSimulatedTest.cxx  igstkAxios3DTrackerToolTest.cxx  igstkBasicTrackerTest.cxx  igstkBinaryDataTest.cxx  igstkBoxObjectTest.cxx  igstkCTImageReaderTest.cxx  igstkCTImageSpatialObjectReadingAndRepresentationTest.cxx  igstkCTImageSpatialObjectReadingAndRepresentationTest2.cxx  igstkCTImageSpatialObjectReadingAndRepresentationTest3.cxx  igstkCTImageSpatialObjectReadingAndRepresentationTest4.cxx  igstkCTImageSpatialObjectRepresentationTest.cxx  igstkCTImageSpatialObjectRepresentationWindowLevelTest.cxx  igstkCTImageSpatialObjectTest.cxx  igstkCircularSimulatedTrackerTest.cxx  (+195 more)
Tests/: CMakeLists.txt  DicomImageReaderTest.cxx  DicomImageReaderTestDirectory.cxx  ICPRegistrationTest.cxx  ImageSliceViewerTest.cxx  LiverTumorSegmentationBaseTest.cxx  MotionViewerTest.cxx  RegistrationCTTest.cxx  SystemInformation.cxx  SystemInformation.h.in  dummy.cxx  igstkEllipseEstimatorTest.cxx  igstkStateMachineTest.cxx  igstkTests.cxx
Utilities/: CMakeLists.txt  SetupForDevelopment.sh
(+1207 files in other folders)
